[package]
name = "libmeshcore-client-support"
version = "0.1.0"
edition = "2024"

[dependencies]
btleplug = { version = "0.11.8", features = ["serde"] }
tokio = "1.49.0"
log = { version = "0.4.29", features = ["kv", "serde"] }

libmeshcore-proto = { path = "../libmeshcore-proto" }

[dev-dependencies]
log4rs = "1.4.0"
